# node-embed-python

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  jest.config.js  package.json
docker/: Dockerfile  docker_build.sh  test_numpy.cpp
src/: dedent.d.ts  dedent.js  index.d.ts  index.js  index.ts  module.cpp  module.h  native.d.ts  py_object_wrapper.cpp  py_object_wrapper.h  utils.cpp  utils.h
tests/: basic.py  basic.tests.ts  dedent.tests.ts  numpy.tests.ts
